# bgremover

./: .gitmodules  CMakeLists.txt  Makefile  README.md  main.cc  tf-v2.2.0-noabsl.patch  tf-v2.2.0-nostatus.patch
src/: background_remover.cc  background_remover.h  background_selector.cc  background_selector.h  debug.h  egl_stubs.cc  main.cc  timing.h  video_writer.cc  video_writer.h
